--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 
         <div class="overlay"></div>
 
-
-        <div class="nav-color p-2 rounded-bottom bg-white  fixed-top" >
+        <div class="nav-color p-2 rounded-bottom bg-white  fixed-top">
 
             <nav class="navbar container navbar-expand-lg " id="mynav">
 
@@ -481,9 +480,9 @@
 
                 <div class="col-md-4 mb-3">
 
-                    <div class="card h-100 ">
+                    <div class="card h-100 overflow-hidden">
                         <img src="./images/first-project.jpg" class="card-img-top trans img-fluid" alt="image not found"
-                            style="height: 300px;">
+                            style="height: 250px;">
                         <div class="card-body">
                             <h5 class="card-title">HTML / CSS</h5>
                             <p class="card-text text-secondary">I designed a sleek and intuitive dashboard using HTML
@@ -502,9 +501,9 @@
 
                 <div class="col-md-4 mb-3">
 
-                    <div class="card h-100 ">
+                    <div class="card h-100 overflow-hidden">
                         <img src="./images/PortfolioDesign.png" class="card-img-top trans img-fluid"
-                            alt="image not found" style="height: 300px;">
+                            alt="image not found" style="height: 250px;">
                         <div class="card-body">
                             <h5 class="card-title">HTML / CSS / Bootstrap</h5>
                             <p class="card-text text-secondary">
@@ -524,9 +523,9 @@
 
                 <div class="col-md-4 mb-3">
 
-                    <div class="card h-100 ">
+                    <div class="card h-100 overflow-hidden">
                         <img src="./images/fruits web.png" class="card-img-top trans img-fluid" alt="image not found"
-                            style="height: 300px;">
+                            style="height: 250px;">
                         <div class="card-body">
                             <h5 class="card-title">HTML / CSS / Bootstrap</h5>
                             <p class="card-text text-secondary">
@@ -549,9 +548,9 @@
 
                 <div class="col-md-4 mb-3">
 
-                    <div class="card h-100 ">
+                    <div class="card h-100 overflow-hidden">
                         <img src="./images/reactimage.PNG" class="card-img-top trans img-fluid" alt="image not found"
-                            style="height: 300px;">
+                            style="height: 250px;">
                         <div class="card-body">
                             <h5 class="card-title">React JS</h5>
                             <p class="card-text text-secondary">
@@ -572,9 +571,9 @@
 
                 <div class="col-md-4 mb-3">
 
-                    <div class="card h-100 ">
+                    <div class="card h-100 overflow-hidden">
                         <img src="./images/zaviaApp.PNG" class="card-img-top trans img-fluid" alt="image not found"
-                            style="height: 300px;">
+                            style="height: 250px;">
                         <div class="card-body">
                             <h5 class="card-title">Mern Stack </h5>
                             <p class="card-text text-secondary">
