--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
                         <a href="https://www.facebook.com/inoxent.irfan.904?mibextid=kFxxJD" target="_blank"
                             class="text-white me-3"><i class="ri-facebook-fill"></i> </a>
                         <a href="#" target="_blank" class="text-white me-3"><i class="ri-twitter-fill"></i></a>
-                        <a href="#" target="_blank" class="text-white me-3"><i class="ri-linkedin-fill"></i></a>
+                        <a href="https://www.linkedin.com/in/muhammad-irfan40/" target="_blank" class="text-white me-3"><i class="ri-linkedin-fill"></i></a>
                         <a href="https://github.com/Muhammadirfan40" target="_blank" class="text-white"><i
                                 class="ri-github-fill"></i></a>
                     </div>
@@ -1011,6 +1011,7 @@
         });
 
     </script>
+
 </body>
 
 
