--- a/index.html
+++ b/index.html
@@ -466,139 +466,135 @@
 
     <!-- Services start End-->
 
-    <!-- Projects start-->
+    <!-- Project Start -->
 
-    <section id="Projects">
 
-        <div class="container p-5">
+    <section id="Projects" class="shadow border-top">
+
+        <div class="container  p-5">
 
             <p class="text-center text-info fw-bold">Projects</p>
-            <h1 class="text-center text-white mb-5">view My Latest <span class="text-info"> Works</span></h1>
-
+            <h1 class="text-center text-dark mb-5">View My Latest <span class="text-info">Works</span></h1>
 
             <div class="row">
 
-                <div class="col-md-4 mb-3">
 
-                    <div class="card h-100 overflow-hidden">
+                <div class="col-md-4 mb-3">
+                    <div class="card h-100 overflow-hidden shadow-sm rounded">
                         <img src="./images/first-project.jpg" class="card-img-top trans img-fluid" alt="image not found"
                             style="height: 250px;">
                         <div class="card-body">
                             <h5 class="card-title">HTML / CSS</h5>
-                            <p class="card-text text-secondary">I designed a sleek and intuitive dashboard using HTML
-                                and CSS, ensuring a user-friendly and visually appealing interface. </p>
-                            <div
-                                class="d-flex justify-content-between flex-wrap gap-2 justify-content-lg-evenly justify-content-md-evenly">
+                            <p class="card-text text-muted">I designed a sleek and intuitive dashboard using HTML and
+                                CSS, ensuring a user-friendly and visually appealing interface.</p>
+                            <div class="d-flex justify-content-between flex-wrap gap-2">
                                 <a href="https://dashboard-gilt-mu.vercel.app/" target="_blank"
-                                    class="btn btn-info queryBTN ">View Live</a>
+                                    class="btn btn-info text-white">View Live</a>
                                 <a href="https://github.com/Muhammadirfan40/Dashboard" target="_blank"
-                                    class="btn btn-outline-info queryBTN ">View Code</a>
+                                    class="btn btn-outline-info">View Code</a>
                             </div>
                         </div>
                     </div>
-
                 </div>
 
                 <div class="col-md-4 mb-3">
-
-                    <div class="card h-100 overflow-hidden">
+                    <div class="card h-100 overflow-hidden shadow-sm rounded">
                         <img src="./images/PortfolioDesign.png" class="card-img-top trans img-fluid"
                             alt="image not found" style="height: 250px;">
                         <div class="card-body">
                             <h5 class="card-title">HTML / CSS / Bootstrap</h5>
-                            <p class="card-text text-secondary">
-                                I designed a responsive portfolio using HTML, CSS, and Bootstrap, creating a visually
-                                stunning and adaptable showcase for my work. </p>
-                            <div
-                                class="d-flex justify-content-between flex-wrap gap-2 justify-content-lg-evenly justify-content-md-evenly">
+                            <p class="card-text text-muted"> I designed a responsive portfolio using HTML, CSS, and
+                                Bootstrap, creating a visually
+                                stunning and adaptable showcase for my work.</p>
+                            <div class="d-flex justify-content-between flex-wrap gap-2">
                                 <a href="https://portfolio-design-swart.vercel.app/" target="_blank"
-                                    class="btn btn-info queryBTN ">View Live</a>
+                                    class="btn text-white btn-info">View Live</a>
                                 <a href="https://github.com/Muhammadirfan40/PortfolioDesign" target="_blank"
-                                    class="btn btn-outline-info queryBTN ">View Code</a>
+                                    class="btn btn-outline-info">View Code</a>
                             </div>
                         </div>
                     </div>
-
                 </div>
 
                 <div class="col-md-4 mb-3">
-
-                    <div class="card h-100 overflow-hidden">
+                    <div class="card h-100 overflow-hidden shadow-sm rounded">
                         <img src="./images/fruits web.png" class="card-img-top trans img-fluid" alt="image not found"
                             style="height: 250px;">
                         <div class="card-body">
                             <h5 class="card-title">HTML / CSS / Bootstrap</h5>
-                            <p class="card-text text-secondary">
-                                I designed a responsive Fruits-Website using HTML, CSS, and Bootstrap, creating a
+                            <p class="card-text text-muted">I designed a responsive Fruits-Website using HTML, CSS, and
+                                Bootstrap, creating a
                                 visually
-                                stunning and adaptable showcase for my work. </p>
-                            <div
-                                class="d-flex justify-content-between flex-wrap gap-2 justify-content-lg-evenly justify-content-md-evenly">
+                                stunning and adaptable showcase for my work.</p>
+                            <div class="d-flex justify-content-between flex-wrap gap-2">
                                 <a href="https://fruits-website-delta.vercel.app/" target="_blank"
-                                    class="btn btn-info queryBTN ">View Live</a>
+                                    class="btn btn-info text-white">View Live</a>
                                 <a href="https://github.com/Muhammadirfan40/Fruits-Website" target="_blank"
-                                    class="btn btn-outline-info queryBTN ">View Code</a>
+                                    class="btn btn-outline-info">View Code</a>
                             </div>
                         </div>
                     </div>
-
                 </div>
 
-
-
                 <div class="col-md-4 mb-3">
-
-                    <div class="card h-100 overflow-hidden">
+                    <div class="card h-100 overflow-hidden shadow-sm rounded">
                         <img src="./images/reactimage.PNG" class="card-img-top trans img-fluid" alt="image not found"
                             style="height: 250px;">
                         <div class="card-body">
                             <h5 class="card-title">React JS</h5>
-                            <p class="card-text text-secondary">
-                                I built a responsive furniture site using React JS with CRUD operation for easy item
+                            <p class="card-text text-muted">I built a responsive furniture site using React JS with CRUD
+                                operation for easy item
                                 management on any device.</p>
-                            <div
-                                class="d-flex justify-content-between flex-wrap gap-2 justify-content-lg-evenly justify-content-md-evenly">
+                            <div class="d-flex justify-content-between flex-wrap gap-2">
                                 <a href="https://react-project-smoky-one.vercel.app/" target="_blank"
-                                    class="btn btn-info queryBTN ">View
-                                    Live</a>
+                                    class="btn btn-info text-white">View Live</a>
                                 <a href="https://github.com/Muhammadirfan40/React-Project" target="_blank"
-                                    class="btn btn-outline-info queryBTN ">View Code</a>
+                                    class="btn btn-outline-info">View Code</a>
                             </div>
                         </div>
                     </div>
-
                 </div>
 
                 <div class="col-md-4 mb-3">
+                    <div class="card h-100 overflow-hidden shadow-sm rounded">
+                        <img src="./images/Calculator.PNG" class="card-img-top trans img-fluid" alt="image not found"
+                            style="height: 250px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Rects JS</h5>
+                            <p class="card-text text-muted">I designed a sleek and intuitive dashboard using HTML and
+                                CSS, ensuring a user-friendly and visually appealing interface.</p>
+                            <div class="d-flex justify-content-between flex-wrap gap-2">
+                                <a href="https://calculator-psi-eight-63.vercel.app/" target="_blank"
+                                    class="btn btn-info text-white">View Live</a>
+                                <a href="https://github.com/Muhammadirfan40/Calculator" target="_blank"
+                                    class="btn btn-outline-info">View Code</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-                    <div class="card h-100 overflow-hidden">
+                <div class="col-md-4 mb-3">
+                    <div class="card h-100 overflow-hidden shadow-sm rounded">
                         <img src="./images/zaviaApp.PNG" class="card-img-top trans img-fluid" alt="image not found"
                             style="height: 250px;">
                         <div class="card-body">
                             <h5 class="card-title">Mern Stack </h5>
-                            <p class="card-text text-secondary">
-                                I built a hospital patient entry system with the MERN stack, delivering a secure and
+                            <p class="card-text text-muted">I built a hospital patient entry system with the MERN stack,
+                                delivering a secure and
                                 user-friendly platform for managing patient data efficiently. </p>
-                            <div
-                                class="d-flex justify-content-between flex-wrap gap-2 justify-content-lg-evenly justify-content-md-evenly">
-                                <a href="https://zavia.vercel.app/" target="_blank" class="btn btn-info queryBTN ">View
+                            <div class="d-flex justify-content-between flex-wrap gap-2">
+                                <a href="https://zavia.vercel.app/" target="_blank" class="btn btn-info text-white">View
                                     Live</a>
                                 <a href="https://github.com/Muhammadirfan40/zavia" target="_blank"
-                                    class="btn btn-outline-info queryBTN ">View Code</a>
+                                    class="btn btn-outline-info">View Code</a>
                             </div>
                         </div>
                     </div>
-
                 </div>
-
 
             </div>
 
-
-
-
         </div>
-
 
     </section>
 
@@ -848,10 +844,6 @@
 
                 </div>
 
-
-
-
-
             </div>
 
         </div>
@@ -889,7 +881,8 @@
                         <a href="https://www.facebook.com/inoxent.irfan.904?mibextid=kFxxJD" target="_blank"
                             class="text-white me-3"><i class="ri-facebook-fill"></i> </a>
                         <a href="#" target="_blank" class="text-white me-3"><i class="ri-twitter-fill"></i></a>
-                        <a href="https://www.linkedin.com/in/muhammad-irfan40/" target="_blank" class="text-white me-3"><i class="ri-linkedin-fill"></i></a>
+                        <a href="https://www.linkedin.com/in/muhammad-irfan40/" target="_blank"
+                            class="text-white me-3"><i class="ri-linkedin-fill"></i></a>
                         <a href="https://github.com/Muhammadirfan40" target="_blank" class="text-white"><i
                                 class="ri-github-fill"></i></a>
                     </div>
