--- a/index.html
+++ b/index.html
@@ -561,8 +561,8 @@
                             style="height: 250px;">
                         <div class="card-body">
                             <h5 class="card-title">Rects JS</h5>
-                            <p class="card-text text-muted">I designed a sleek and intuitive dashboard using HTML and
-                                CSS, ensuring a user-friendly and visually appealing interface.</p>
+                            <p class="card-text text-muted">Developed a responsive calculator with React.js and
+                                JavaScript, using Tailwind CSS for a modern interface and smooth functionality.</p>
                             <div class="d-flex justify-content-between flex-wrap gap-2">
                                 <a href="https://calculator-psi-eight-63.vercel.app/" target="_blank"
                                     class="btn btn-info text-white">View Live</a>
