--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                         <img src="./images/Calculator.PNG" class="card-img-top trans img-fluid" alt="image not found"
                             style="height: 250px;">
                         <div class="card-body">
-                            <h5 class="card-title">Rects JS</h5>
+                            <h5 class="card-title">React JS</h5>
                             <p class="card-text text-muted">Developed a responsive calculator with React.js and
                                 JavaScript, using Tailwind CSS for a modern interface and smooth functionality.</p>
                             <div class="d-flex justify-content-between flex-wrap gap-2">
